// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiListGroup is rendered 1`] = `
<ul
  aria-label="aria-label"
  class="euiListGroup testClass1 testClass2 emotion-euiListGroup-s-maxWidthDefault-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiListGroup listItems is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-maxWidthDefault"
>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-m"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__inner-m-text"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="stop"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-m"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__inner-m-text"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-text-euiListGroupItemExtraAction-alwaysShow"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-m"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-text-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-text-m"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-text-isActive-isClickable"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Active link"
      >
        Active link
      </span>
    </a>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-text-m"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-text-isClickable"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
  </li>
</ul>
`;

exports[`EuiListGroup listItems is rendered with color 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-maxWidthDefault"
>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-m"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__inner-m-primary"
    >
      <span
        class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
        color="inherit"
        data-euiicon-type="stop"
      />
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Label with iconType"
      >
        Label with iconType
      </span>
    </span>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-m"
  >
    <span
      class="euiListGroupItem__text emotion-euiListGroupItem__inner-m-primary"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Custom extra action"
      >
        Custom extra action
      </span>
    </span>
    <button
      aria-label="bell"
      class="euiButtonIcon euiListGroupItemExtraAction emotion-euiButtonIcon-xs-empty-primary-euiListGroupItemExtraAction-alwaysShow"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="bell"
      />
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-primary-m"
  >
    <button
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-primary-isClickable"
      type="button"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Button with onClick"
      >
        Button with onClick
      </span>
    </button>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-primary-primary-m"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-primary-isActive-isClickable"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Active link"
      >
        Active link
      </span>
    </a>
  </li>
  <li
    class="euiListGroupItem emotion-euiListGroupItem-primary-m"
  >
    <a
      class="euiListGroupItem__button emotion-euiListGroupItem__inner-m-primary-isClickable"
      href="#"
      rel="noreferrer"
    >
      <span
        class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
        title="Link with href"
      >
        Link with href
      </span>
    </a>
  </li>
</ul>
`;

exports[`EuiListGroup listItems is rendered with size 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-maxWidthDefault"
/>
`;

exports[`EuiListGroup props bordered is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-bordered-maxWidthDefault"
/>
`;

exports[`EuiListGroup props flush is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-flush-maxWidthDefault"
/>
`;

exports[`EuiListGroup props gutter size m is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-m-maxWidthDefault"
/>
`;

exports[`EuiListGroup props gutter size none is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-none-maxWidthDefault"
/>
`;

exports[`EuiListGroup props gutter size s is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-maxWidthDefault"
/>
`;

exports[`EuiListGroup props maxWidth as a number is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s"
  style="max-inline-size: 300px;"
/>
`;

exports[`EuiListGroup props maxWidth as a string is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s"
  style="max-inline-size: 20em;"
/>
`;

exports[`EuiListGroup props maxWidth as true is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-maxWidthDefault"
/>
`;

exports[`EuiListGroup props showToolTips is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-maxWidthDefault"
/>
`;

exports[`EuiListGroup props wrapText is rendered 1`] = `
<ul
  class="euiListGroup emotion-euiListGroup-s-maxWidthDefault"
/>
`;
